--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
     "name": "Personalized News Aggregator",
     "description": "Base Level Extension",
     "version": "1.0",
+    "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css; font-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/webfonts/; connect-src 'self' http://127.0.0.1:5000;"
+  },
     "action": {
       "default_popup": "popup.html"
     },
