--- a/trained_model/config.json
+++ b/trained_model/config.json
@@ -42,7 +42,7 @@
     "29": "STYLE",
     "30": "STYLE & BEAUTY",
     "31": "TASTE",
-    "32": "TECH",
+    "32": "TECHNOLOGY",
     "33": "THE WORLDPOST",
     "34": "TRAVEL",
     "35": "U.S. NEWS",
