--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "description": "Base Level Extension",
     "version": "1.0",
     "icons": {
-      
-      "48": "icon.png"
+      "16": "news16x16.png",
+      "48": "news.png"
     },
     "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css; font-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/webfonts/; connect-src 'self' http://127.0.0.1:5000;"
